--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <script src="js/perlin.js"></script>
         <script src="js/entities.js"></script>
         <script src="js/SceneMain.js"></script>
+        <script src="js/MenueScene.js"></script>    
+        <script src="js/HowToPlayScene.js"></script>
         <script src="js/game.js"></script>
     </body>
 </html>
