--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <script src="js/phaser.js"></script>
         <script src="js/perlin.js"></script>
         <script src="js/entities.js"></script>
+        <script src="js/Projectile.js"></script>
+        <script src="js/Enemy.js"></script>
         <script src="js/SceneMain.js"></script>
         <script src="js/game.js"></script>
     </body>
