COLLISION DETECTION (almost done)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <script src="js/phaser.js"></script>
         <script src="js/perlin.js"></script>
-        <script src="js/entities.js"></script>
+        <script src="js/mapgen.js"></script>
         <script src="js/Projectile.js"></script>
         <script src="js/Enemy.js"></script>
         <script src="js/SceneMain.js"></script>
