added new enemy type spawn conditions

--- a/index.html
+++ b/index.html
@@ -4,8 +4,26 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title> Map Test</title>
+        <title> Coast Raider</title>
     </head>
+    <style>
+        body, html {
+            background-image: "content/sprites/bgmenue.jpg";
+            margin: 0;
+            padding: 0;
+            width: 100%;
+            height: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: #000; /* Optional: to set the background color */
+        }
+        #game-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
     <body>
         <script src="js/phaser.js"></script>
         <script src="js/perlin.js"></script>
