--- a/index.html
+++ b/index.html
@@ -29,11 +29,14 @@
         <script src="js/perlin.js"></script>
         <script src="js/mapgen.js"></script>
         <script src="js/Projectile.js"></script>
+        <script src="js/tripleshot.js"></script>
         <script src="js/Enemy.js"></script>
         <script src="js/SceneMain.js"></script>
         <script src="js/MenueScene.js"></script>    
         <script src="js/HowToPlayScene.js"></script>
+        <script src="js/UpgradeScene.js"></script>
         <script src="js/game.js"></script>
+
     </body>
 </html>
 </html>
